<resources>
    <string name="app_name">我的礼物说</string>
    <string name="home_title">搜索单品、攻略</string>
    <string name="mine_login">注册登录</string>
    <string name="mine_other">使用社交账号登录</string>
    <string name="sure">确定</string>
    <string name="mobile">输入手机号</string>
    <string name="password">输入密码</string>

    <string name="home">首页</string>
    <string name="list">榜单</string>
    <string name="store">商店</string>
    <string name="classify">分类</string>
    <string name="mine">我的</string>
    <string name="giftlist">礼物榜</string>
    <string name="buyquick">立即购买</string>
    <string name="car">加入购物车</string>
    <string name="column">栏目</string>
</resources>
