<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lanou3g.gifttheory.activity.MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
    </FrameLayout>

    <RadioGroup
        android:id="@+id/rp_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/radioButton"
            android:drawableTop="@drawable/radiobutton_home_bg"
            android:checked="true"
            android:text="@string/home" />
        <RadioButton
            android:id="@+id/rb_sale"
            style="@style/radioButton"
            android:drawableTop="@drawable/radiobutton_sale_bg"
            android:text="@string/list" />
        <RadioButton
            android:id="@+id/rb_store"
            style="@style/radioButton"
            android:drawableTop="@drawable/radiobutton_store_bg"
            android:text="@string/store" />
        <RadioButton
            android:id="@+id/rb_classify"
            style="@style/radioButton"
            android:drawableTop="@drawable/radiobutton_classify_bg"
            android:text="@string/classify" />
        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/radioButton"
            android:drawableTop="@drawable/radiobutton_mine_bg"
            android:text="@string/mine" />
    </RadioGroup>
</LinearLayout>
