<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_icon_wechat"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:src="@mipmap/icon_share_wechat"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_40"/>
    <ImageView
        android:id="@+id/iv_icon_qq"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_alignTop="@id/iv_icon_wechat"
        android:layout_toRightOf="@id/iv_icon_wechat"
        android:src="@mipmap/icon_share_qq"
        android:layout_marginLeft="@dimen/dp_40"/>
    <ImageView
        android:id="@+id/iv_icon_sina"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:src="@mipmap/icon_share_sina"
        android:layout_alignTop="@id/iv_icon_wechat"
        android:layout_toLeftOf="@id/iv_icon_wechat"
        android:layout_marginRight="@dimen/dp_40"/>



    <TextView
        android:text="@string/mine_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_above="@+id/iv_icon_wechat"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/iv_sex_mine"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:src="@mipmap/me_avatar_girl"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/iv_icon_sina" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mine_login"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/iv_sex_mine"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <EditText
        android:hint="@string/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:id="@+id/editText3"

        />

    <EditText
        android:hint="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:drawableEnd="@mipmap/ic_visible_close"
        android:ems="10"
        android:layout_below="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_centerHorizontal="true"
        android:id="@+id/editText4" />

    <ImageView
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        app:srcCompat="@mipmap/icon_cellphone"
        android:layout_alignTop="@+id/editText3"
        android:layout_toStartOf="@+id/editText3"
        android:layout_marginTop="@dimen/dp_20"
        android:id="@+id/imageView5" />

    <ImageView
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        app:srcCompat="@mipmap/icon_password"
        android:layout_alignBottom="@+id/editText4"
        android:layout_toStartOf="@+id/editText4"
        android:id="@+id/imageView6" />

    <Button
        android:text="@string/sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_alignEnd="@+id/editText4"
        android:layout_toEndOf="@+id/imageView6" />


</RelativeLayout>